send data to popup

--- a/app/popup.html
+++ b/app/popup.html
@@ -11,8 +11,9 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>'Allo, 'Allo!</h1>
-
+    <ul id="buttons">
+    </ul>
+    <button id='disable_button'> Disable </button>
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
